data/derived/comb/progs/unify/prog3127.ml.out
Characters 28-52:
  wwhile (fun b -> (b,f b = b),b);;
         ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
